<resources>
    <string name="app_name">RaddiLo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_logincust">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="title_activity_loginshop">LogIn</string>
    <string name="title_activity_home_shop">HomeShop</string>
    <string name="title_activity_home_cust">HomeCust</string>
    <string name="title_activity_profile_shop">ProfileShop</string>
    <string name="title_activity_profile_cust">ProfileCust</string>
    <string name="title_activity_updatecust">updatecust</string>
    <string name="title_activity_updateshop">updateshop</string>
    <string name="title_activity_bookings">Bookings</string>


    <string name="booking_url">http://139.59.47.63/fetchmyorders.php</string>
    <string name="feedback_url">http://139.59.47.63/feedback.php</string>
    <string name="success">success</string>
    <string name="successfully_send">Successfully Send</string>
    <string name="enter_query">Kindly Enter your query first!!</string>
    <string name="homecusturl">http://139.59.47.63/bookraddiorder.php</string>
    <string name="homeshopurl">http://139.59.47.63/fetchtodayorders.php</string>
    <string name="successful_order">Ordered Successfully</string>
    <string name="fetchshopurl">http://139.59.47.63/fetchshop.php</string>
    <string name="slowinternet">Internet is slow. Please try again with good internet speed.</string>
    <string name="logincust">http://139.59.47.63/logincust.php</string>
    <string name="enteremailpassword">Enter your email and password!!!!</string>
    <string name="loginshop">http://139.59.47.63/loginshop.php</string>
    <string name="verifycust">http://139.59.47.63/verifycust.php</string>
    <string name="verifyshop">http://139.59.47.63/verifyshop.php</string>
    <string name="custprofile">http://139.59.47.63/getprofilecust.php</string>
    <string name="shopprofile">http://139.59.47.63/getprofileshop.php</string>
    <string name="registercust">http://139.59.47.63/registercust.php</string>
    <string name="registershop">http://139.59.47.63/registershop.php</string>
    <string name="updatecust">http://139.59.47.63/updatecustdetails.php</string>
    <string name="updateshop">http://139.59.47.63/updateshopdetails.php</string>
    <string name="differentpassword">"Password did not match"</string>
    <string name="fillfields">Kindly fill all Fields!!</string>
    <string name="ar">Already Registered</string>
    <string name="rf">"Registration Failed"</string>
    <string name="failed">failed</string>
    <string name="already">already</string>
    <string name="enterotp">Enter OPT</string>
    <string name="vf">Verification Failed</string>
    <string name="enterweight">Kindly enter the Approx weight in KG</string>


    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="quantity">Quantity:</string>
    <string name="address">Address:</string>
    <string name="paper">Paper:</string>
    <string name="metal">Metal:</string>
    <string name="plastic">Plastic:</string>
    <string name="glass">Glass:</string>
    <string name="others">Others:</string>
    <string name="raddilo">Raddi Lo</string>
    <string name="quote">Recycle at best </string>
    <string name="shopname">Shop Name:</string>
    <string name="shopemail">Shop Email:</string>
    <string name="shopphone">Shop Phone:</string>
    <string name="shopadd">Shop Address:</string>
    <string name="update">Update</string>
    <string name="todayorder">Todays Order</string>
    <string name="selectshop">Select Shop</string>
    <string name="aw">Approx weight</string>
    <string name="sellnow">Sell Now</string>
    <string name="kg">IN KG</string>
    <string name="myorder">My Orders</string>
    <string name="accalready">Already Have an Account</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="resendotp">Resend OTP</string>
    <string name="givefeedback">Give us your Feedback</string>
    <string name="send">Send</string>
    <string name="feedback">FeedBack</string>
    <string name="support">Support us to Build a clean World As:</string>
    <string name="customer">Customer</string>
    <string name="recycler">Recycler</string>
    <string name="abtus">About Us</string>
    <string name="para">We believe that recycling is the best way to reduce waste.we are building an app to promote recycling. Recyclers will be collecting the to be recycled product and the seller or the customers will be selling them out when they want to.   They could easily choose the nearby recycler (collecting items for recycling)around them and sell their items for recycling.selecting the type of items they want to sell(paper,plastic,metal,glass). . </string>
    <string name="github">Github:  https://github.com/milkiminz</string>
    <string name="milki">Name:  Milki Minz</string>
    <string name="mymail">Email: wwwmilki.minz096@gmail.com</string>
    <string name="abtdev">About Developer</string>


    <string name="msg_welcome">Welcome to Admob. Click on the below button to launch the Interstitial ad.</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-6129156869323654</string>
    <string name="fetchfeatures">http://kgbvbundu.org/capstone/fetchfeatures.php</string>
    <string name="upcomingfeatures">Upcoming Features !</string>
    <string name="arrow">-></string>

    <string name="cdad">About Developers Activity</string>
    <string name="uf">Upcoming Features</string>
    <string name="item">TextView</string>
    <string name="choose">Choose-Role</string>
    <string name="ufa">Upcoming Features</string>
    <string name="abt">About Me!</string>
    <string name="login">Login</string>
    <string name="otpver">Check your Email Or Spam for an OTP!</string>
</resources>
