<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.milkiminz.raddilo.OtpCust">

    <Button
        android:text="@string/resendotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sreotp"
        android:layout_marginBottom="124dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ssopt"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/sreotp"
        android:layout_alignRight="@+id/sreotp"
        android:layout_alignEnd="@+id/sreotp"
        android:onClick="sub" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enterotp"
        android:ems="10"
        android:id="@+id/sotp"
        android:layout_marginBottom="140dp"
        android:layout_alignBottom="@+id/ssopt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="76dp"
        android:layout_marginEnd="76dp" />
</RelativeLayout>
