<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.milkiminz.raddilo.OtpCust">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enterotp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="120dp"
        android:id="@+id/cotp" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cotp"
        android:layout_alignRight="@+id/cotp"
        android:layout_alignEnd="@+id/cotp"
        android:layout_marginRight="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginTop="104dp"
        android:id="@+id/csopt" />

    <Button
        android:text="@string/resendotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/csopt"
        android:layout_alignLeft="@+id/csopt"
        android:layout_alignStart="@+id/csopt" />
</RelativeLayout>
