<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/update"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.milkiminz.raddilo.UpdateCustomer"
    tools:showIn="@layout/activity_updatecust"
    tools:ignore="Overdraw">
    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView5"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:background="@android:color/background_light"
        android:alpha="0.6" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView6"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_marginTop="27dp"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:alpha="0.6"
        android:background="@android:color/background_light" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView8"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_marginTop="31dp"
        android:id="@+id/address"
        android:hint="@string/address"
        android:background="@android:color/background_light"
        android:alpha="0.6" />

    <Button
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="update1" />
</RelativeLayout>
